--- a/org.openwms.core/org.openwms.core.domain/pom.xml
+++ b/org.openwms.core/org.openwms.core.domain/pom.xml
@@ -31,10 +31,10 @@
     </parent>
     <artifactId>org.openwms.core.domain</artifactId>
     <name>${project.artifactId}</name>
-    <description>CORE domain model, enhanced with JPA annotations.</description>
     <properties>
         <moduleDir>../../..</moduleDir>
     </properties>
+    <description>CORE domain JPA entity classes.</description>
     <build>
         <plugins>
             <plugin>
