--- a/org.openwms.core/org.openwms.core.infrastructure.configuration.provider/pom.xml
+++ b/org.openwms.core/org.openwms.core.infrastructure.configuration.provider/pom.xml
@@ -32,6 +32,7 @@
     <artifactId>org.openwms.core.infrastructure.configuration.provider</artifactId>
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
+    <description>This component wraps the org.openwms.core.infrastructure.configuration component into a JAR file that is deployed in Non-OSGI environments and can be accessed by Spring from classpath.</description>
     <properties>
         <moduleDir>../../..</moduleDir>
     </properties>
