--- a/org.openwms.core/org.openwms.core.infrastructure.hsql/pom.xml
+++ b/org.openwms.core/org.openwms.core.infrastructure.hsql/pom.xml
@@ -32,6 +32,7 @@
     <artifactId>org.openwms.core.infrastructure.hsql</artifactId>
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
+    <description>Contains Spring configuration to start an in-memory HSQL database and creates a suitable DataSource for test purposes.</description>
     <properties>
         <moduleDir>../../..</moduleDir>
         <openwms.configuration.version>0.2-SNAPSHOT</openwms.configuration.version>
