--- a/org.openwms.core/org.openwms.core.infrastructure.oracle/pom.xml
+++ b/org.openwms.core/org.openwms.core.infrastructure.oracle/pom.xml
@@ -32,6 +32,7 @@
     <artifactId>org.openwms.core.infrastructure.oracle</artifactId>
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
+    <description>Contains Spring configuration to create a DataSource for Oracle databases. The Oracle JDBC driver is repackaged and due to license reasons available in the private Nexus repository only.</description>
     <properties>
         <moduleDir>../../..</moduleDir>
         <openwms.configuration.version>0.2-SNAPSHOT</openwms.configuration.version>
