--- a/org.openwms.core/org.openwms.core.integration.eclipselink/pom.xml
+++ b/org.openwms.core/org.openwms.core.integration.eclipselink/pom.xml
@@ -32,6 +32,7 @@
     <artifactId>org.openwms.core.integration.eclipselink</artifactId>
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
+    <description>Packages Spring configuration that starts a JPA EntityManagerFactory with Eclipselink.</description>
     <properties>
         <moduleDir>../../..</moduleDir>
     </properties>
