--- a/org.openwms.core/org.openwms.core.util/pom.xml
+++ b/org.openwms.core/org.openwms.core.util/pom.xml
@@ -32,6 +32,7 @@
     <artifactId>org.openwms.core.util</artifactId>
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
+    <description>A project that contains utility classes, exception types, common event types that are used by all other projects.</description>
     <properties>
         <moduleDir>../../..</moduleDir>
     </properties>
