activated all profile by default

--- a/org.openwms.app/pom.xml
+++ b/org.openwms.app/pom.xml
@@ -59,6 +59,11 @@
     <profiles>
         <profile>
             <id>all</id>
+            <activation>
+                <property>
+                    <name>!top</name>
+                </property>
+            </activation>
             <modules>
                 <module>org.openwms.app.par</module>
                 <module>org.openwms.app.plan</module>
