--- a/org.openwms.tms/pom.xml
+++ b/org.openwms.tms/pom.xml
@@ -58,6 +58,11 @@
     <profiles>
         <profile>
             <id>all</id>
+            <activation>
+                <property>
+                    <name>!top</name>
+                </property>
+            </activation>
             <modules>
                 <module>org.openwms.tms.domain</module>
                 <module>org.openwms.tms.integration</module>
