--- a/org.openwms.core/org.openwms.core.infrastructure.configuration.provider/src/main/resources/org.openwms.core.infrastructure.configuration.properties
+++ b/org.openwms.core/org.openwms.core.infrastructure.configuration.provider/src/main/resources/org.openwms.core.infrastructure.configuration.properties
@@ -25,17 +25,17 @@
 #application.initial.properties=file:initial-preferences.xml
 
 # JDBC options, used by the DataSource bean
-jdbc.username=OPENWMS
-jdbc.password=OPENWMS
+jdbc.username=openwms2
+jdbc.password=openwms
 jdbc.persistenceUnit=OpenWMS-test-durable
 jdbc.showSql=true
 
 # PostgreSQL settings
-jdbc.driverClassName=org.postgresql.Driver
-jdbc.url=jdbc:postgresql:OPENWMS
-jdbc.database=POSTGRESQL
-jdbc.properties="hibernate.connection.compatible=7.1 hibernate.hbm2ddl.auto=update hibernate.cache.use_query_cache=false hibernate.format_sql=true hibernate.show_sql=true"
-jdbc.dialect=org.hibernate.dialect.PostgreSQLDialect
+#jdbc.driverClassName=org.postgresql.Driver
+#jdbc.url=jdbc:postgresql:OPENWMS
+#jdbc.database=POSTGRESQL
+#jdbc.properties="hibernate.connection.compatible=7.1 hibernate.hbm2ddl.auto=update hibernate.cache.use_query_cache=false hibernate.format_sql=true hibernate.show_sql=true"
+#jdbc.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # HSQL settings
 #jdbc.driverClassName=org.hsqldb.jdbcDriver
@@ -45,11 +45,11 @@ jdbc.dialect=org.hibernate.dialect.PostgreSQLDialect
 #jdbc.dialect=org.hibernate.dialect.HSQLDialect
 
 # MySQL settings
-#jdbc.driverClassName=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://ec2-23-21-211-172.compute-1.amazonaws.com:3306/OPENWMS
-#jdbc.dialect=org.hibernate.dialect.MySQL5Dialect
-#jdbc.database=MYSQL
-#jdbc.properties=
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://ec2-50-19-213-178.compute-1.amazonaws.com:3306/openwmsdb
+jdbc.dialect=org.hibernate.dialect.MySQL5Dialect
+jdbc.database=MYSQL
+jdbc.properties=
 
 # System user credentials
 system.user=openwms
