mod bees config

--- a/org.openwms.app/org.openwms.client.angularjs.wrapper/pom.xml
+++ b/org.openwms.app/org.openwms.client.angularjs.wrapper/pom.xml
@@ -57,7 +57,7 @@
         <profile>
             <id>cloudbees</id>
             <properties>
-                <bees.appid>ajs</bees.appid>
+                <bees.appid>openwms/ajs</bees.appid>
             </properties>
             <build>
                 <plugins>
