--- a/org.openwms.core/org.openwms.core.infrastructure.configuration.provider/src/main/resources/org.openwms.core.infrastructure.configuration.properties
+++ b/org.openwms.core/org.openwms.core.infrastructure.configuration.provider/src/main/resources/org.openwms.core.infrastructure.configuration.properties
@@ -19,38 +19,53 @@
 # 02110-1301 USA, or see the FSF site: http://www.fsf.org.
 #
 
+# ----------------------------------------------------------------
 # (Optional) Application properties file. You probably want to define your own
 # initial preferences for the application, modules, roles or particular users.
 # In order to find the file on your system, prefix the absolute file path with 'file:'.
+# ----------------------------------------------------------------
 #application.initial.properties=file:initial-preferences.xml
 
-# JDBC options, used by the DataSource bean
-jdbc.username=openwms2
-jdbc.password=openwms
+# ----------------------------------------------------------------
+# JDBC options, used by all datasources if not overridden
+# ----------------------------------------------------------------
+jdbc.username=OPENWMS
+jdbc.password=OPENWMS
 jdbc.persistenceUnit=OpenWMS-test-durable
 jdbc.showSql=true
 
-# PostgreSQL settings
-#jdbc.driverClassName=org.postgresql.Driver
+# ----------------------------------------------------------------
+# PostgreSQL settings on CLOUDBEES
+# ----------------------------------------------------------------
+jdbc.driverClassName=org.postgresql.Driver
 #jdbc.url=jdbc:postgresql:OPENWMS
-#jdbc.database=POSTGRESQL
-#jdbc.properties="hibernate.connection.compatible=7.1 hibernate.hbm2ddl.auto=update hibernate.cache.use_query_cache=false hibernate.format_sql=true hibernate.show_sql=true"
-#jdbc.dialect=org.hibernate.dialect.PostgreSQLDialect
+jdbc.url=jdbc:postgresql://openwms.blogsite.org:4001/openwms-cb
+jdbc.database=POSTGRESQL
+jdbc.properties="hibernate.connection.compatible=7.1 hibernate.hbm2ddl.auto=update hibernate.cache.use_query_cache=false hibernate.format_sql=true hibernate.show_sql=true"
+jdbc.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# HSQL settings
+# ----------------------------------------------------------------
+# HSQL settings for Test
+# ----------------------------------------------------------------
 #jdbc.driverClassName=org.hsqldb.jdbcDriver
 #jdbc.url=jdbc:hsqldb:mem:OPENWMS
 #jdbc.database=HSQL
 #jdbc.properties=hibernate.hbm2ddl.auto=create hibernate.cache.use_query_cache=false hibernate.format_sql=true hibernate.show_sql=true
 #jdbc.dialect=org.hibernate.dialect.HSQLDialect
 
-# MySQL settings
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://ec2-50-19-213-178.compute-1.amazonaws.com:3306/openwmsdb
-jdbc.dialect=org.hibernate.dialect.MySQL5Dialect
-jdbc.database=MYSQL
-jdbc.properties=
+# ----------------------------------------------------------------
+# MySQL settings - on CloudBees Database
+# ----------------------------------------------------------------
+#jdbc.username=openwms2
+#jdbc.password=openwms
+#jdbc.driverClassName=com.mysql.jdbc.Driver
+#jdbc.url=jdbc:mysql://ec2-50-19-213-178.compute-1.amazonaws.com:3306/openwmsdb
+#jdbc.dialect=org.hibernate.dialect.MySQL5Dialect
+#jdbc.database=MYSQL
+#jdbc.properties=
 
+# ----------------------------------------------------------------
 # System user credentials
+# ----------------------------------------------------------------
 system.user=openwms
 system.password=openwms
