--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/webapp/bower.json
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/webapp/bower.json
@@ -23,6 +23,7 @@
     "es5-shim": "~2.0.8",
     "json3": "~3.2.4",
     "underscore.string": "~2.3.3",
-    "underscore": "~1.5.2"
+    "underscore": "~1.5.2",
+    "ui-bootstrap": "~0.10.0"
   }
 }
