AJS-2: worked on roles management

--- a/org.openwms.core/org.openwms.core.service.spring/src/main/resources/core-service-exceptions.properties
+++ b/org.openwms.core/org.openwms.core.service.spring/src/main/resources/core-service-exceptions.properties
@@ -1,1 +1,5 @@
-role.already.exists=Role cannot be created because a Role with name "{0}" already exist.
+general.technical.error=Technical service exception occurred
+
+role.already.exists=Role cannot be created because a Role with name "{0}" already exist
+role.not.exist=Role with name "{0}" cannot be found. Probably it has been removed
+role.remove.null.argument=Role to be removed must not be null {0}
