AJS-2 Worked on role management screen

--- a/org.openwms.core/org.openwms.core.infrastructure.configuration.provider/src/main/resources/org.openwms.core.infrastructure.configuration.properties
+++ b/org.openwms.core/org.openwms.core.infrastructure.configuration.provider/src/main/resources/org.openwms.core.infrastructure.configuration.properties
@@ -38,8 +38,8 @@ jdbc.showSql=true
 # PostgreSQL settings on CLOUDBEES
 # ----------------------------------------------------------------
 jdbc.driverClassName=org.postgresql.Driver
-#jdbc.url=jdbc:postgresql:OPENWMS
-jdbc.url=jdbc:postgresql://openwms.blogsite.org:4001/openwms-cb
+jdbc.url=jdbc:postgresql:OPENWMS
+#jdbc.url=jdbc:postgresql://openwms.blogsite.org:4001/openwms-cb
 jdbc.database=POSTGRESQL
 jdbc.properties="hibernate.connection.compatible=7.1 hibernate.hbm2ddl.auto=update hibernate.cache.use_query_cache=false hibernate.format_sql=true hibernate.show_sql=true"
 jdbc.dialect=org.hibernate.dialect.PostgreSQLDialect
