--- a/org.openwms.core/org.openwms.core.client.rest/src/main/resources/core-rest-exceptions.properties
+++ b/org.openwms.core/org.openwms.core.client.rest/src/main/resources/core-rest-exceptions.properties
@@ -1,2 +1,5 @@
 
+user.is.transient=User to save must already be persisted before 
+user.has.changed=User to save has changed in the meantime, please press refresh. 
+
 role.is.transient=Role to save must already be persisted before 
