--- a/org.openwms.core/org.openwms.core.client.rest/src/main/resources/core-rest-exceptions.properties
+++ b/org.openwms.core/org.openwms.core.client.rest/src/main/resources/core-rest-exceptions.properties
@@ -1,4 +1,6 @@
 
+core.validation.error=Input not valid, please check all required fields!
+
 user.is.transient=User to save must already be persisted before 
 user.has.changed=User to save has changed in the meantime, please press refresh. 
 
