--- a/org.openwms.core/org.openwms.core.service.spring/src/main/resources/core-service-exceptions.properties
+++ b/org.openwms.core/org.openwms.core.service.spring/src/main/resources/core-service-exceptions.properties
@@ -1,8 +1,15 @@
 general.technical.error=Technical service exception occurred
 
+user.already.exists=User cannot be created because an User with name "{0}" already exist
 user.not.exist=User with name "{0}" cannot be found. Probably it has been removed
-user.remove.null.argument=User to be removed must not be null {0}
+user.create.null.argument=User to be created must not be null
+user.remove.null.argument=User to be removed must not be null
+user.save.null.argument=User to be save must not be null
+user.profile.save.null.argument=User to save profile for must not be null
+
 
 role.already.exists=Role cannot be created because a Role with name "{0}" already exist
 role.not.exist=Role with name "{0}" cannot be found. Probably it has been removed
-role.remove.null.argument=Role to be removed must not be null {0}
+role.create.null.argument=Role to be created must not be null
+role.remove.null.argument=Role to be removed must not be null
+role.save.null.argument=Role to be saved must not be null
