--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
     <licenses>
         <license>
             <name>GNU General Public License</name>
-            <url>http://www.gnu.org/licenses/lgpl.txt</url>
+            <url>https://www.gnu.org/licenses/old-licenses/gpl-2.0.txt</url>
             <distribution>repo</distribution>
             <comments>OpenWMS.org is distributed as open-source</comments>
         </license>
