--- a/pom.xml
+++ b/pom.xml
@@ -463,22 +463,30 @@
         <plugin.assembly.version>2.4</plugin.assembly.version>
         <plugin.bees-maven-plugin>1.3.2</plugin.bees-maven-plugin>
         <plugin.bundlor.version>1.0.0.RELEASE</plugin.bundlor.version>
+        <plugin.checkstyle.version>2.11</plugin.checkstyle.version>
         <plugin.clean.version>2.5</plugin.clean.version>
+        <plugin.cobertura.version>2.3</plugin.cobertura.version>
+        <plugin.dashboard.version>1.0.0-beta-1</plugin.dashboard.version>
         <plugin.deploy.version>2.8.1</plugin.deploy.version>
         <plugin.compiler.version>3.1</plugin.compiler.version>
         <plugin.enforcer.version>1.3.1</plugin.enforcer.version>
+        <plugin.findbugs.version>2.3.1</plugin.findbugs.version>
         <plugin.flexmojos.version>3.3.0</plugin.flexmojos.version>
         <plugin.install.version>2.4</plugin.install.version>
         <plugin.jar.version>2.3.2</plugin.jar.version>
         <plugin.javadoc.version>2.9.1</plugin.javadoc.version>
+        <plugin.jdepend.version>2.0-beta-2</plugin.jdepend.version>
         <plugin.jrebel.version>1.1.5</plugin.jrebel.version>
         <plugin.jxr.version>2.3</plugin.jxr.version>
         <plugin.gpg.version>1.4</plugin.gpg.version>
         <plugin.lifecycle-mapping.version>1.0.0</plugin.lifecycle-mapping.version>
         <plugin.par.version>1.0.0.RELEASE</plugin.par.version>
+        <plugin.pmd.version>2.4</plugin.pmd.version>
+        <plugin.project-info.version>2.4</plugin.project-info.version>
         <plugin.resources.version>2.6</plugin.resources.version>
         <plugin.source.version>2.2.1</plugin.source.version>
         <plugin.surefire.version>2.16</plugin.surefire.version>
+        <plugin.surefire-report.version>2.5</plugin.surefire-report.version>
         <plugin.taglist.version>2.4</plugin.taglist.version>
         <plugin.wagon-ssh.version>2.1</plugin.wagon-ssh.version>
         <plugin.war.version>2.4</plugin.war.version>
@@ -851,13 +859,15 @@
                             <detectLinks>true</detectLinks>
                             <links>
                                 <link>http://static.springsource.org/spring/docs/${spring.version}/javadoc-api</link>
-                                <link>http://static.springsource.org/spring-security/site/docs/3.2.x/apidocs</link>
+                                <link>http://static.springsource.org/spring-security/site/docs/3.1.x/apidocs</link>
                                 <link>http://commons.apache.org/lang/api-2.5</link>
                                 <link>http://docs.oracle.com/javaee/5/api</link>
-                                <link>http://docs.mockito.googlecode.com/hg/${mockito.version}</link>
+                                <link>http://docs.mockito.googlecode.com/hg/latest</link>
                             </links>
                             <excludePackageNames>org.openwms.web.flex.servlet</excludePackageNames>
                             <keywords>true</keywords>
+                            <minmemory>1g</minmemory>
+                            <maxmemory>2g</maxmemory>
                             <linksource>true</linksource>
                             <overview>${basedir}/overview.html</overview>
                             <source>${project.build.sourceCompilerLevel}</source>
@@ -953,22 +963,22 @@
                 </configuration>
             </plugin>
 
-            <plugin>
+            <!--plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>2.4</version>
+                <version>${plugin.checkstyle.version}</version>
                 <configuration>
                     <xrefLocation>${project.reporting.outputDirectory}/../../xref</xrefLocation>
-                    <enableRulesSummary>false</enableRulesSummary>
+                    <enableRulesSummary>true</enableRulesSummary>
                     <configLocation>http://openwms2005.sourceforge.net/rules/checkstyle/checkstyle.xml</configLocation>
                     <headerLocation>http://openwms2005.sourceforge.net/rules/checkstyle/checkstyle-license.txt</headerLocation>
                 </configuration>
-            </plugin>
+            </plugin-->
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
-                <version>2.4</version>
+                <version>${plugin.pmd.version}</version>
                 <configuration>
                     <targetJdk>${maven.compile.targetLevel}</targetJdk>
                     <format>xml</format>
@@ -981,7 +991,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>2.5</version>
+                <version>${plugin.surefire-report.version}</version>
                 <configuration>
                     <aggregate>true</aggregate>
                     <xrefLocation>${project.reporting.outputDirectory}/../xref-test</xrefLocation>
@@ -992,13 +1002,13 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>jdepend-maven-plugin</artifactId>
-                <version>2.0-beta-2</version>
+                <version>${plugin.jdepend.version}</version>
             </plugin>
 
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
-                <version>2.3</version>
+                <version>${plugin.cobertura.version}</version>
                 <configuration>
                     <formats>
                         <format>html</format>
@@ -1010,7 +1020,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
-                <version>2.3.1</version>
+                <version>${plugin.findbugs.version}</version>
                 <configuration>
                     <xrefLocation>${project.reporting.outputDirectory}/../xref</xrefLocation>
                     <xmlOutput>true</xmlOutput>
@@ -1027,7 +1037,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
-                <version>2.1.2</version>
+                <version>${plugin.project-info.version}</version>
                 <reportSets>
                     <reportSet>
                         <inherited>true</inherited>
@@ -1058,13 +1068,12 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>dashboard-maven-plugin</artifactId>
-                <version>1.0.0-beta-1</version>
+                <version>${plugin.dashboard.version}</version>
             </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
-                <version>2.1</version>
             </plugin>
 
         </plugins>
