CORE-16 worked on service structure

--- a/org.openwms.core/org.openwms.core.service.spring/src/main/resources/core-service-exceptions.properties
+++ b/org.openwms.core/org.openwms.core.service.spring/src/main/resources/core-service-exceptions.properties
@@ -21,6 +21,9 @@
 #
 general.technical.error=Technical service exception occurred
 
+entity.already.exists=User cannot be created because an User with name "{0}" already exist
+entity.not.exist=User with name "{0}" cannot be found. Probably it has been removed
+
 user.already.exists=User cannot be created because an User with name "{0}" already exist
 user.not.exist=User with name "{0}" cannot be found. Probably it has been removed
 user.create.null.argument=User to be created must not be null
