CORE-16 - Improve implementation of services

--- a/org.openwms.core/org.openwms.core.service.spring/src/main/resources/core-service-exceptions.properties
+++ b/org.openwms.core/org.openwms.core.service.spring/src/main/resources/core-service-exceptions.properties
@@ -30,7 +30,8 @@ user.create.null.argument=User to be created must not be null
 user.remove.null.argument=User to be removed must not be null
 user.save.null.argument=User to be save must not be null
 user.profile.save.null.argument=User to save profile for must not be null
-
+user.password.save.null.argument=User to change password for must not be null
+user.passwort.invalid=Password does not match the defined pattern
 
 role.already.exists=Role cannot be created because a Role with name "{0}" already exist
 role.not.exist=Role with name "{0}" cannot be found. Probably it has been removed
