CORE-16 - Improve implementation of services

--- a/org.openwms.core/org.openwms.core.service.spring/src/main/resources/core-service-exceptions.properties
+++ b/org.openwms.core/org.openwms.core.service.spring/src/main/resources/core-service-exceptions.properties
@@ -38,3 +38,6 @@ role.not.exist=Role with name "{0}" cannot be found. Probably it has been remove
 role.create.null.argument=Role to be created must not be null
 role.remove.null.argument=Role to be removed must not be null
 role.save.null.argument=Role to be saved must not be null
+
+module.save.startup.order.null.argument=List of modules to save the startupOrder for must not be null
+module.save.null.argument=Module to be saved must not be null
