CORE-16 - Improve implementation of services

--- a/org.openwms.core/org.openwms.core.service.spring/src/main/resources/core-service-exceptions.properties
+++ b/org.openwms.core/org.openwms.core.service.spring/src/main/resources/core-service-exceptions.properties
@@ -41,3 +41,4 @@ role.save.null.argument=Role to be saved must not be null
 
 module.save.startup.order.null.argument=List of modules to save the startupOrder for must not be null
 module.save.null.argument=Module to be saved must not be null
+module.modulename.null.argument=Modulename must not be null
